--- a/xcms-preprocessing.org
+++ b/xcms-preprocessing.org
@@ -10,16 +10,15 @@
 #+BEGIN_EXPORT html
 ---
 title: "Metabolomics data pre-processing using xcms"
-author: "Johannes Rainer (johannes.rainer@eurac.edu)"
+author: "Johannes Rainer (johannes.rainer@eurac.edu)\ngithub/twitter: jotsetung"
 graphics: yes
 date: "`r doc_date()`"
 output:
-  BiocStyle::html_document2:
+  BiocStyle::html_document:
     number_sections: true
     toc_float: true
     toc_depth: 2
-bibliography: metabolomics-references.bib
-csl: biomed-central.csl
+bibliography: references.bib
 references:
 - id: dummy
   title: no title
@@ -43,7 +42,25 @@ by exporting the metabolomics-preprocessing.org file.
   - New functions.
   - Internal changes and code cleanup.
 
-*** Definitions and common naming convention
+** Mass spectrometry
+
++ Mass spectrometry (MS) allows to measure abundances of charged ions in a
+  sample.
++ Data is represented/measured in a spectrum.
+#+BEGIN_EXPORT html
+![](images/MS.png)
+#+END_EXPORT
+
++ Many ions with the same/similar mass-to-charge ratio m/z.
++ Additional separation of compounds by additional properties
+  (hydrophobic/hydrophilic): liquid or gas chromatography.
+#+BEGIN_EXPORT html
+![](images/LCMS.png)
+#+END_EXPORT
+
++ LC-MS based untargeted metabolomics: identify /chromatographic/ peaks.
+
+** Definitions and common naming convention
 
 + chromatographic peak: peak containing the signal from an ion in retention time
   dimension.
@@ -54,7 +71,7 @@ by exporting the metabolomics-preprocessing.org file.
   ion) across files.
 + feature: chromatographic peaks grouped across files.
 
-** Workflow: metabolomics data preprocessing using =xcms=
+* Workflow: metabolomics data preprocessing using =xcms=
 
 This workflow describes the basic data handling (I/O) of mass spectrometry data
 using the =MSnbase= package, and the LC/GC-MS data preprocessing using =xcms=. The
@@ -64,7 +81,21 @@ short description of a simple data centroiding approach and concluded by the
 detection, alignment and correspondence. The workflow does not cover data
 normalization procedures and differential abundance analysis.
 
-*** Data import and representation
+** Prerequisites
+
++ Rstudio
++ R version >= 3.5.0
++ Libraries:
+#+BEGIN_SRC R :ravel eval = FALSE, results = "hide"
+  source("https://bioconductor.org/biocLite.R")
+  biocLite(c("xcms", "MSnbase", "doParallel", "rgl", "msdata", "magrittr",
+	     "devtools"))
+  ## Need xcms version > 3.3.1
+  if (packageVersion("xcms") < "3.3.1")
+      devtools::install_github("sneumann/xcms", ref = "master")
+#+END_SRC
+
+** Data import and representation
 
 Below we load all required libraries and read our toy data using the =readMSData=
 function. We also define a =data.frame= describing the experiment and pass this to
@@ -79,6 +110,7 @@ enables the analysis also of very large experiments.
   library(MSnbase)
   library(xcms)
   library(doParallel)
+  library(magrittr)
 
   ## Define the file names.
   fls <- dir(system.file("sciex", package = "msdata"), full.names = TRUE)
@@ -86,8 +118,10 @@ enables the analysis also of very large experiments.
   ## Define a data.frame with additional information on the files.
   pd <- data.frame(file = basename(fls),
 		   injection_idx = c(1, 19),
-		   sample = "POOL")
-  data <- readMSData(fls, pdata = new("NAnnotatedDataFrame", pd), mode = "onDisk")
+		   sample = c("POOL_1", "POOL_2"),
+		   group = "POOL")
+  data <- readMSData(fls, pdata = new("NAnnotatedDataFrame", pd),
+		     mode = "onDisk")
 #+END_SRC
 
 Next we set up the parallel processing. This ensures that all required cores are
@@ -121,10 +155,10 @@ object. This can be accessed with the =fData= function.
   head(fData(data))
 #+END_SRC
 
-+ With the data not being in memory, any data manipulation (such as smoothing)
-  has to be applied on-the-fly.
++ Note: with the data not being in memory, any data manipulation (such as
+  smoothing) is never applied to the data but is performed on-the-fly.
 
-*** Basic data access and visualization
+** Basic data access and visualization
 
 The MS data in an =OnDiskMSnExp= object is organized by spectrum (similar as in
 /mzML/ files), with =Spectrum= objects used as containers for the respective m/z and
@@ -158,19 +192,22 @@ can be, in the case of indexed mzML, mzXML and CDF files, very fast. Data
 objects can be easily subsetted using filter functions, such as =filterFile=,
 =filterRtime=, =filterMz= or =filterMsLevel= to filter the data by file, retention
 time range, m/z range or MS level. To illustrate this we retrieve below all
-spectra measured between 180 and 181 seconds.
+spectra measured between 180 and 181 seconds. Note that we use the pipe operator
+=%>%= from the =magrittr= package to avoid nested function calls.
 
 #+NAME: spectra-filterRt
 #+BEGIN_SRC R :ravel message = FALSE
-  ## Get all spectra measured between 180 and 181 seconds 
-  sps <- spectra(filterRt(data, rt = c(180, 181)))
+  ## Get all spectra measured between 180 and 181 seconds
+  ## Use %>% for better readability
+  sps <- data %>%
+      filterRt(rt = c(180, 181)) %>%
+      spectra
 
   ## How many spectra?
   length(sps)
 
   ## From which file?
-  lapply(sps, fromFile)
-
+  sapply(sps, fromFile)
 #+END_SRC
 
 We have thus 3 spectra per file. Below we plot the data from the last spectrum
@@ -187,105 +224,490 @@ expected mass to charge ratio for the [M+H]+ adduct of Serine.
 
 While MS data is in general organized by spectrum, in LC-MS experiments we are
 used to analyze the data along the retention time axis. To extract
-/chromatographic/ data we can use the =chromatogram= method. In the example below we
-extract the trace of all ions with a m/z between 106.02 and 106.07 along the
-full retention time.
+/chromatographic/ data we can use the =chromatogram= method. The function aggregates
+intensities for each scan/retention time along the m/z axis and returns the
+retention time - intensity duplets in a =Chromatogram= object, one per file. The
+=Chromatogram= object supports the =rtime= and =intensity= functions to extract the
+respective information. Below we use the =chromatogram= function to extract the
+total ion chromatogram (TIC) for each file.
 
-#+NAME: chromatogram
-#+BEGIN_SRC R :ravel message = FALSE
-  chr <- chromatogram(data, mz = c(106.2, 106.7))
+#+NAME: chromatogram-tic
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Total ion chromatogram.", fig.width = 10, fig.height = 5
+  ## Get chromatographic data (TIC) for an m/z slice
+  chr <- chromatogram(data)
+  chr
+
+  ## Plot the tic
+  plot(chr)
 #+END_SRC
 
-This function can be used to create for example base peak chromatograms, total
-ion chromatograms or extracted ion chromatograms. Below we extract for example
-the extracted ion chromatogram for Serine by first filtering the data object by
-retention time, then by m/z and finally plotting it. Note that for clarity
-reasons, we are using the =%>%= (pipe) operator from the =magrittr= package hence
-avoiding encapsulated function calls.
+Depending on the parameter =aggregationFun=, the function can produce total ion
+chromatograms (TIC) with =aggregationFun = "sum"= or base peak chromatograms (BPC)
+with =aggregationFun = "max"=. Below we extract the ion chromatogram for Serine by
+first filtering the data object by retention time, then by m/z and finally
+plotting it.
 
 #+NAME: serine-xic
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Extracted ion chromatogram for the Serine [M+H]+ ion."
+  ## Extract and plot the XIC for Serine
   data %>%
       filterRt(rt = c(175, 189)) %>%
       filterMz(mz = c(106.02, 106.07)) %>%
-      chromatogram() %>%
+      chromatogram(aggregationFun = "max") %>%
       plot()
-    
 #+END_SRC 
 
-*** Centroiding of profile MS data
++ Easy to access sub-sets of the raw data.
++ =spectra= to get intensities along m/z for discrete retention time.
++ =chromatogram= to get intensities along rt for m/z range. 
++ Use =rtime=, =mz=, =intensity= to access the MS values.
+
+** Centroiding of profile MS data
 
 + /centroiding/ is the process in which mass peaks are reduced to a single,
   representative signal, their centroids.
-+ xcms, specifically /centWave/ was designed for centroided data.
++ =xcms=, specifically /centWave/ was designed for centroided data.
 + Proper centroiding can improve data accuracy.
 + =MSnase= provides basic tools to perform MS data smoothing and centroiding:
   =smooth= and =pickPeaks=.
-+ _Example:_ show the profile mode data for Serine.
-  #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Profile data for Serine."
-    ## Filter the MS data to the signal from the Serine ion and plot it using
-    ## type = "XIC"
-    data %>%
-	filterRt(rt = c(175, 189)) %>%
-	filterMz(mz = c(106.02, 106.07)) %>%
-	plot(type = "XIC")
-  #+END_SRC
++ Interactive code: show the combined m/z, rt and intensity data for Serine.
 
-+ Smooth data in m/z dimension using a Savitzky-Golay filter followed by a
-  centroiding that simply reports the maximum signal for each mass peak in each
-  spectrum. See =?pickPeaks= for more advanced options.
-+ _Example:_ perform data smoothing and centroiding and plot the result for the
-  Serine data.
-  #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Centroided data for Serine."
-    data_cent <- data %>%
-	smooth(method = "SavitzkyGolay", halfWindowSize = 6) %>%
-	pickPeaks()
+#+NAME: serine-profile-mode-data
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Profile data for Serine."
+  ## Filter the MS data to the signal from the Serine ion and plot it using
+  ## type = "XIC"
+  data %>%
+      filterRt(rt = c(175, 189)) %>%
+      filterMz(mz = c(106.02, 106.07)) %>%
+      plot(type = "XIC")
+#+END_SRC
 
-    ## Plot the centroided data for Serine
-    data_cent %>%
-	filterRt(rt = c(175, 189)) %>%
-	filterMz(mz = c(106.02, 106.07)) %>%
-	plot(type = "XIC")
-  #+END_SRC
++ plot =type = "XIC"= creates a combined chromatographic and /map/ visualization of
+  the data.
++ Interactive code: smooth data in m/z dimension using a Savitzky-Golay filter
+  followed by a centroiding that simply reports the maximum signal for each mass
+  peak in each spectrum. See =?pickPeaks= for more advanced options.
+
+#+NAME: centroiding
+#+BEGIN_SRC R :ravel message = FALSE, warning = FALSE, fig.cap = "Centroided data for Serine.", fig.width = 10, fig.height = 5
+  ## Smooth the signal, then do a simple peak picking.
+  data_cent <- data %>%
+      smooth(method = "SavitzkyGolay", halfWindowSize = 6) %>%
+      pickPeaks()
+
+  ## Plot the centroided data for Serine
+  data_cent %>%
+      filterRt(rt = c(175, 189)) %>%
+      filterMz(mz = c(106.02, 106.07)) %>%
+      plot(type = "XIC")
+#+END_SRC
 
 + Note: data smoothing and centroiding is applied to the data /on-the-fly/, each
   time m/z or intensity values are accessed. To make the centroiding /persistent/
   we need to export the centroided data.
-+ _Example:_ export the smoothed data to new files and re-read the data.
-  #+BEGIN_SRC R :ravel message = FALSE
-    ## Write the centroided data to files with the same names in the current
-    ## directory
-    fls_new <- basename(fileNames(data))
-    writeMSData(data_cent, file = fls_new)
++ Interactive code: export the smoothed data to new files and re-read the data.
 
-    ## Read the centroided data.
-    data_cent <- readMSData(fls_new, pdata = new("NAnnotatedDataFrame", pd),
-			    mode = "onDisk")
-  #+END_SRC
+#+NAME: export-centroided
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Write the centroided data to files with the same names in the current
+  ## directory
+  fls_new <- basename(fileNames(data))
+  writeMSData(data_cent, file = fls_new)
+
+  ## Read the centroided data.
+  data_cent <- readMSData(fls_new, pdata = new("NAnnotatedDataFrame", pd),
+			  mode = "onDisk")
+#+END_SRC
+
+** LC-MS data preprocessing
 
 *** Chromatographic peak detection
 
 + Aim: identify chromatographic peaks in the data.
 + Function: =findChromPeaks=.
-+ Methods available:
-  - /matchedFilter/ (=MatchedFilterParam=).
-  - /centWave/ (=CentWaveParam=).
-  - /massifquant/ (=MassifquantParam=).
++ Available methods:
+  - /matchedFilter/ (=MatchedFilterParam=) \cite{Smith:2006ic}.
+  - /centWave/ (=CentWaveParam=) \cite{Tautenhahn:2008fx}.
+  - /massifquant/ (=MassifquantParam=) \cite{Conley:2014ha}.
+
++ CentWave is a two-step approach:
+1) identify regions of interest.
+
+#+BEGIN_EXPORT html
+![](images/centWave-ROI.png)
+#+END_EXPORT
+
+2) peak detection within this regions using continuous wavelet transform (CWT).
+
+#+BEGIN_EXPORT html
+![](images/centWave-CWT.png)
+#+END_EXPORT
+
++ CentWave parameters:
+
+#+NAME: centwave-help
+#+BEGIN_SRC R :ravel results = "hide"
+  ?CentWaveParam
+#+END_SRC
+
++ Crucial parameters: =peakwidth=, =ppm=.
++ =peakwidth=: minimal and maximal expected peak width. Depends on the LC
+  settings of the experiment.
++ Interactive code: extract chromatographic data for Serine and perform peak
+  detection using default parameters
+
+#+NAME: centWave-default
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "XIC for Serine", results = "hide"
+  ## Get the XIC for serine in the first file
+  srn_chr <- chromatogram(data_cent, rt = c(165, 200),
+			  mz = c(106.03, 106.06),
+			  aggregationFun = "max")[1, 1]
+  ## Plot the data
+  par(mfrow = c(1, 1), mar = c(4, 4.5, 1, 1))
+  plot(srn_chr)
+
+  ## Get default centWave parameters
+  cwp <- CentWaveParam()
+
+  ## "dry-run" peak detection on the XIC.
+  findChromPeaks(srn_chr, param = cwp)
+
+  cwp
+#+END_SRC
+
++ What went wrong? Default for =peakwidth= does not match the current data.
++ Interactive code: change =peakwidth= and run again.
+
+#+NAME: centWave-adapted
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "XIC for Serine with detected chromatographic peak", results = "hide"
+  cwp <- CentWaveParam(peakwidth = c(2, 10))
+
+  pks <- findChromPeaks(srn_chr, param = cwp)
+
+  ## Plot the data and higlight identified peak area
+  plot(srn_chr)
+  rect(pks[, "rtmin"], 0, pks[, "rtmax"], pks[, "maxo"], border = "#00000040")
+#+END_SRC
+
++ Ideally check settings on more known compounds.
++ =ppm=: maximal allowed scattering of m/z values for one ion.
++ Interactive code: evaluate the m/z scattering of the signal for Serine.
+
+#+NAME: Serine-mz-scattering-plot
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Restrict the data to signal from Sering
+  srn <- data_cent %>%
+      filterRt(rt = c(179, 186)) %>%
+      filterMz(mz = c(106.04, 106.06))
+
+  ## Plot the data
+  plot(srn, type = "XIC")
+#+END_SRC
+
++ Interactive code: calculate the difference in m/z values between consecutive
+  scans.
+
+#+NAME: define-ppm
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Extract the Serine data for one file as a data.frame
+  srn_df <- as(filterFile(srn, 1), "data.frame")
+  head(srn_df)
+
+  ## The difference between m/z values from consecutive scans
+  diff(srn_df$mz)
+
+  ## The same in ppm
+  diff(srn_df$mz) * 1e6 / mean(srn_df$mz)
+#+END_SRC
+
++ Ideally this should also be performed on more compounds.
++ =ppm= should be large enough to capture the full chromatographic peak.
++ Interactive code: perform chromatographic peak detection.
+
+#+NAME: findPeaks-centWave
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Perform peak detection
+  cwp <- CentWaveParam(peakwidth = c(2, 10), ppm = 30)
+  data_cent <- findChromPeaks(data_cent, param = cwp)
+#+END_SRC
+
++ Result: =XCMSnExp= object extends the =OnDiskMSnExp=, so we can access the data in
+  the same way plus it stores preprocessing results.
++ Interactive code: explore the result object.
+
+#+NAME: xcmsnexp
+#+BEGIN_SRC R :ravel message = FALSE, results = "hide"
+  data_cent
+
+  ## Access the peak detection results
+  head(chromPeaks(data_cent))
+#+END_SRC
+
++ For quality assessment, we could also do some summary statistics on the
+  identified peaks.
++ Interactive code: plot the location of the identified peaks in the m/z - rt
+  plane.
+#+NAME: plotChromPeaks
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Location of the identified chromatographic peaks"
+  par(mfrow = c(1, 2))
+  plotChromPeaks(data_cent, 1)
+  plotChromPeaks(data_cent, 2)
+#+END_SRC
 
 *** Alignment
 
 + Aim: adjusts shifts in retention times between samples.
-+ Function: =adjustRtime=.
-+ Methods available:
++ Interactive code: plot the base peak chromatograms of all files.
+#+NAME: alignment-bpc-raw
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "BPC of all files", fig.width = 8, fig.height = 4
+  ## Extract base peak chromatograms
+  bpc_raw <- chromatogram(data_cent, aggregationFun = "max")
+  par(mfrow = c(1, 1))
+  plot(bpc_raw)
+#+END_SRC
 
++ Function: =adjustRtime=.
++ Available methods:
+  - /peakGroups/ (=PeakGroupsParam=) \cite{Smith:2006ic}: align samples based on
+    hook peaks.
+  - /obiwarp/ (=ObiwarpParam=) \cite{Prince:2006jj}: warps the (full) data to a
+    reference sample.
+
++ peakGroups works reasonably well in most cases.
++ Need to define the hook peaks first: peaks present in most/all samples.
++ Important parameters:
+  - =minFraction=: proportion of samples in which a feature has to be present (0.9
+    for present in 90% of samples).
+  - =span=: degree of smoothing for the loess function, 0 likely overfitting, 1
+    linear regression. Values between 0.4 and 0.6 seem reasonable.
++ Interactive code: perform a peak grouping to define potential hook peaks and
+  align the samples based on these.
+#+NAME: alignment-correspondence
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Define the settings for the initial peak grouping - details for
+  ## choices in the next section.
+  pdp <- PeakDensityParam(sampleGroups = data_cent$group, bw = 1.8,
+			  minFraction = 1, binSize = 0.02)
+  data_cent <- groupChromPeaks(data_cent, pdp)
+
+  ## Define settings for the alignment
+  pgp <- PeakGroupsParam(minFraction = 1, span = 0.6)
+  data_cent <- adjustRtime(data_cent, param = pgp)
+#+END_SRC
+
++ Adjusted retention times are stored in the object.
++ Interactive code: inspect the difference between raw and adjusted retention
+  times. Helps to determine whether settings were OK.
+#+NAME: alignment-result
+#+BEGIN_SRC R :ravel message = FALSE, fig.width = 8, fig.height = 4
+  ## Plot the difference between raw and adjusted retention times
+  plotAdjustedRtime(data_cent)
+#+END_SRC
+
++ Evaluate alignment results:
+  - difference between raw and adjusted retention time reasonable.
+  - hook peaks along the full retention time range.
+  - comparison of BPC (TIC) before/after alignment.
+  - evaluate data for known compounds.
++ Interactive code: plot BPC before and after alignment.
+
+#+NAME: bpc-raw-adjusted
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "BPC before (top) and after (bottom) alignment.", fig.width = 10, fig.height = 8
+  par(mfrow = c(2, 1))
+  ## Plot the raw base peak chromatogram
+  plot(bpc_raw)
+  ## Plot the BPC after alignment
+  plot(chromatogram(data_cent, aggregationFun = "max"))
+#+END_SRC
+
++ Interactive code: plot Serine XIC before and after alignment.
+
+#+NAME: serine-xic-adjusted
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "XIC for Serine before (left) and after (right) alignment", fig.width = 10, fig.height = 4
+  ## Use adjustedRtime parameter to access raw/adjusted retention times
+  par(mfrow = c(1, 2), mar = c(4, 4.5, 1, 0.5))
+  plot(chromatogram(data_cent, mz = c(106.04, 106.06),
+		    rt = c(179, 186), adjustedRtime = FALSE))
+  plot(chromatogram(data_cent, mz = c(106.04, 106.06),
+		    rt = c(179, 186)))
+#+END_SRC
+
++ If we need to repeat simply remove alignment results with =dropAdjustedRtime=
+  and retry.
 
 *** Correspondence
 
-+ Aim: group signal from the same ion across samples.
++ Aim: group signal (peaks) from the same ion across samples.
 + Function: =groupChromPeaks=.
 + Methods available:
+  - /peak density/ (=PeakDensityParam=) \cite{Smith:2006ic}.
+  - /nearest/ (=NearestPeaksParam=) \cite{Katajamaa:2006jh}.
 
-** Conclusion
++ peak density: 
+  - iterates through slices of m/z ranges and groups chromatographic in each if
+    peaks (from same or different samples) are close in retention time.
+  - whether they are close is estimated on the distribution of peaks along the
+    retention time.
++ Interactive code: plot the data for the m/z slice containing the Serine peak
+  and dry-run a correspondence analysis.
+
+#+NAME: correspondence-example
+#+BEGIN_SRC R :ravel message = FALSE, results = "hide", fig.cap = "BPC for a m/z slice and defined features within this slice based on default settings." 
+  ## Plot the BPC for the m/z slice containing serine
+  par(mfrow = c(2, 1), mar = c(4, 4.3, 1, 0.5))
+  plot(chromatogram(data_cent, mz = c(106.04, 106.06), aggregationFun = "max"))
+  highlightChromPeaks(data_cent, mz = c(106.04, 106.06),
+		      whichPeaks = "apex_within")
+
+  ## Get default parameters for the grouping
+  pdp <- PeakDensityParam(sampleGroups = data_cent$group)
+  pdp
+
+  ## Dry-run correspondence and show the results.
+  plotChromPeakDensity(data_cent, mz = c(106.04, 106.06),
+		       type = "apex_within", param = pdp)
+
+#+END_SRC
+
++ Black line shows the peak density estimate, points represent the position of
+  peaks along the retention time axis per sample and grey rectangles indicate
+  grouped peaks (features).
++ Parameters:
+  - =binSize=: m/z width of the bin/slice of data in which peaks are grouped.
+  - =bw= defines the smoothness of the density function.
+  - =maxFeatures=: maximum number of features to be defined in one bin.
+  - =minFraction=: minimum proportion of samples (of one group!) for which a peak
+    has to be present.
+  - =minSamples=: minimum number of samples a peak has to be present.
++ Parameters =minFraction= and =minSamples= depend on experimental layout!
++ =binSize= should be small enough that peaks from different ions measured at the
+  same retention time would not be grouped together.
++ Interactive code: determine acceptable =bw= setting. Plot data for ions with
+  same m/z and similar retention time: isomers Betaine and Valine ([M+H]+ m/z
+  118.08625).
+
+#+NAME: correspondence-bw
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Define correspondence settings to separate Methylhistidine peaks.", fig.width = 10, fig.height = 10
+  par(mfrow = c(3, 1), mar = c(3, 4.3, 1, 1))
+
+  ## Plot the chromatogram for an m/z slice containing Betaine and Valine
+  mzr <- 118.08625 + c(-0.01, 0.01)
+  plot(chromatogram(data_cent, mz = mzr, aggregationFun = "max"))
+  highlightChromPeaks(data_cent, mz = mzr, whichPeaks = "apex_within")
+
+  ## Correspondence in that slice using default settings
+  pdp <- PeakDensityParam(sampleGroups = data_cent$group)
+  plotChromPeakDensity(data_cent, mz = mzr, param = pdp, type = "apex_within")
+
+  ## Reducing the bandwidth
+  pdp <- PeakDensityParam(sampleGroups = data_cent$group, bw = 1.8)
+  plotChromPeakDensity(data_cent, mz = mzr, param = pdp, type = "apex_within")
+#+END_SRC
+
++ Reducing the =bw= enables grouping of isomer peaks into different
+  features.
++ Interactive code: perform the correspondence analysis.
+
+#+NAME: correspondence-analysis
+#+BEGIN_SRC R :ravel message = FALSE
+  pdp <- PeakDensityParam(sampleGroups = data_cent$group, bw = 1.8,
+			  minFraction = 0.4, binSize = 0.02)
+
+  ## Perform the correspondence analysis
+  data_cent <- groupChromPeaks(data_cent, param = pdp)
+#+END_SRC
+
++ Evaluate results after correspondence: check for another slice with isomers:
+  Leucine, Isoleucine ([M+H]+ m/z 132.10191). Setting =simulate = FALSE= shows the
+  actual grouping results.
+
+#+NAME: correspondence-evaluate
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Result of correspondence on a slice containing the isomers Leucine and Isoleucine.", fig.width = 10, fig.heigt = 8
+  par(mfrow = c(2, 1), mar = c(3, 4.3, 1, 1))
+
+  ## Plot the chromatogram for an m/z slice containing Leucine and Isoleucine
+  mzr <- 132.10191 + c(-0.01, 0.01)
+  plot(chromatogram(data_cent, mz = mzr, aggregationFun = "max"))
+  highlightChromPeaks(data_cent, mz = mzr, whichPeaks = "apex_within")
+
+  plotChromPeakDensity(data_cent, mz = mzr, param = pdp, type = "apex_within",
+		       simulate = FALSE)
+#+END_SRC
+
++ Interactive code: inspect result object and extract feature intensities.
+
+#+NAME: correspondence-result-object
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Get general information
+  data_cent
+
+  ## Overview of the performed processings
+  processHistory(data_cent)
+
+  ## Access the parameter class for a processing step
+  processParam(processHistory(data_cent)[[1]])
+#+END_SRC
+
++ Interactive code: inspect definition of features and extract feature
+intensities.
+
+#+NAME: correspondence-feature-values
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Definition of the features
+  featureDefinitions(data_cent)
+
+  ## Per-feature summary.
+  head(featureSummary(data_cent))
+
+  ## feature intensity matrix
+  fmat <- featureValues(data_cent, value = "into", method = "maxint")
+  head(fmat)
+#+END_SRC
+
++ =featureValues= parameters:
+  - =value=: name of the column in =chromPeaks= that should be returned.
+  - =method=: for features with multiple peaks in one sample: from which peak the
+    should the value be returned?
+
++ About missing values: peak detection may have failed. =fillChromPeaks= allows to
+  fill in signal for missing peaks from the feature area (defined by the median
+  rt and mz of all peaks assigned to the feature).
+  Parameters:
+  - =expandMz=: expands the region from which signal is integrated in m/z
+    dimension. A value of 0 means no expansion, 1 means the region is grown by
+    half of the feature's m/z width on both sides.
+  - =expandRt=: expand the retention time window of the feature for integration.
+  - =ppm=: expand the m/z width by a m/z dependent value.
++ Interactive code: evaluate the number of missing peaks and use =fillChromPeaks=
+  to retrieve a signal for them from the raw files.
+
+#+NAME: fillChromPeaks
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Number of missing values
+  sum(is.na(fmat))
+
+  ## Define the settings for the fill-in of missing peaks
+  fpp <- FillChromPeaksParam(expandMz = 0.5, expandRt = 0.5, ppm = 20)
+  data_cent <- fillChromPeaks(data_cent, param = fpp)
+
+  ## How many missing values after
+  sum(is.na(featureValues(data_cent)))
+
+  fmat_fld <- featureValues(data_cent, value = "into", method = "maxint")
+  head(fmat_fld)
+#+END_SRC
+
++ Note: =dropFilledChromPeaks= removes filled-in peaks again.
+
+* Summary
+
++ Don't blindly use default parameters!
++ The new data objects and functions are aimed to simplify data access and
+  inspection of results and should facilitate data set-dependent definition of
+  algorithm parameters.
++ More work to come for the analysis of chromatographic data (SRM/MRM).
+
+* References
 
 
 
